fixed flex spacing for dashboard view

--- a/src/app/db-recipe-row/db-recipe-row.component.scss
+++ b/src/app/db-recipe-row/db-recipe-row.component.scss
@@ -9,6 +9,11 @@
   padding-bottom: 0.5rem;
 }
 
+.item{
+  flex-basis: 100%;
+  text-align: center;
+}
+
 h2 {
   margin-bottom: 0;
 }
